# duplff

./: .gitignore  Cargo.toml  INSTALL.md  README.md
.claude/: settings.local.json
.claude/docs/: architecture.md  build-and-ci.md  cli-guide.md  core-api.md  gui-guide.md  overview.md
.claude/skills/: add-cli-feature.md  add-core-feature.md  add-gui-feature.md  build-and-release.md  run-tests.md  troubleshoot-ci.md
.github/workflows/: ci.yml  release.yml
crates/duplff-cli/: Cargo.toml
crates/duplff-cli/src/: cli.rs  format.rs  main.rs  non_interactive.rs
crates/duplff-cli/src/tui/: detail.rs  groups.rs  help.rs  mod.rs  scan.rs  state.rs
crates/duplff-core/: Cargo.toml
crates/duplff-core/src/: actions.rs  cache.rs  deduper.rs  error.rs  hasher.rs  lib.rs  log_store.rs  models.rs  progress.rs  ranker.rs  scanner.rs  verify.rs
crates/duplff-core/tests/: integration.rs
crates/duplff-gui/: package-lock.json  package.json  svelte.config.js
crates/duplff-gui/src/: app.css  app.html
crates/duplff-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/duplff-gui/src-tauri/icons/: icon.icns
crates/duplff-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
crates/duplff-gui/src/lib/: api.ts  format.ts  stores.ts  types.ts
docs/: duplff-cli.md  duplff-core.md  duplff-gui.md
docs/plans/: 2026-03-02-duplff-cli-design.md  2026-03-02-duplff-cli-implementation.md  2026-03-02-duplff-core-design.md  2026-03-02-duplff-core-implementation.md  2026-03-04-duplff-gui-design.md  2026-03-04-duplff-gui-implementation.md  2026-03-04-gui-polish-cicd.md
(+19 files in other folders)
