[package]
name = "duplff-cli"
version = "0.1.0"
edition = "2021"
description = "CLI and TUI interface for duplff duplicate file finder"
license = "MIT"

[[bin]]
name = "duplff"
path = "src/main.rs"

[dependencies]
duplff-core = { path = "../duplff-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
humansize = "2"
serde_json = "1"
