[package]
name = "duplff-core"
version = "0.1.2"
edition = "2021"
description = "Core duplicate file detection library for duplff"
license = "MIT"

[dependencies]
blake3 = "1"
ignore = "0.4"
rayon = "1"
trash = "5"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
crossbeam-channel = "0.5"
rusqlite = { version = "0.33", features = ["bundled"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
